tests/negative/traits/method_not_in_empty_trait.orng
trait My_Trait { }

impl My_Trait for Int {
    fn f() -> () { }
}

fn main() -> Int {
    4
}